2004-11-13  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: fixed mkdir.
	* FileSet.cc: fixed file mode comparision.
	* resource.cc, ftpclass.cc: new setting ftps:initial-prot.

2004-11-03  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: change command to RETRP to differentiate from plain RETR
	  in transfer continuation; modify shell command to speed up partial
	  transfers.
	* complete.cc, lftp_rl.c, lftp_rl.h: improve completion of aliases.

2004-11-03  Loic Le Loarer <lll+lftp@m4x.org>

	* Fish.cc: add support for continue mode in fish protocol.

2004-11-01  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fix condition for unbound data socket (this fixes FXP).

2004-10-28  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: add --no-symlinks option.
	* Http.cc: fixed Cache-Control combination - use comma instead of space.

2004-10-21  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: fixed file removing with --delete-first option;
	  optimized done job deletion.

2004-10-20  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: remove bogus assert.
	* MirrorJob.cc: fix permissions comarision; don't Roll parent mirror
	  if DONE (this fixes a mysterious corruption - looks like trouble
	  when MirrorJob's are deleted in wrong order).
	* SMTask.cc: add assert; check deleting before Roll loop.

2004-10-18  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc, Fish.h, SFtp.cc, SFtp.h: don't sent password several times,
	  as it most probably is incorrect.
	* CmdExec.h, parsecmd.cc: (quotable, is_space, is_quote) add utility
	  functions; use them.
	* complete.cc: (copy_word_skip, skip_word) new functions; use them for
	  argument counting; better mirror -R completion.

2004-10-17  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: fixed rare coredump when parent_mirror was referenced
	  from dtor, and it was already deleted.

2004-10-15  Alexander V. Lukyanov <lav@yars.free.net>
